--- a/animhist/pres2/index.html
+++ b/animhist/pres2/index.html
@@ -25,9 +25,9 @@
             </section>
             
             <section>
-	            <img src="http://www.vangoghgallery.com/es/images/Van-Gogh_New-Template/prints-set1/print-starry-night.jpg">
-				<img src="http://i.telegraph.co.uk/multimedia/archive/01440/Picasso---Weeping-_1440387i.jpg">
-				<img src="https://www.ibiblio.org/wm/paint/auth/kandinsky/kandinsky.comp-8.jpg">
+	            <img style="height: 400px;" src="http://www.vangoghgallery.com/es/images/Van-Gogh_New-Template/prints-set1/print-starry-night.jpg">
+				<img style="height: 400px;" src="http://i.telegraph.co.uk/multimedia/archive/01440/Picasso---Weeping-_1440387i.jpg">
+				<img style="height: 400px;" src="https://www.ibiblio.org/wm/paint/auth/kandinsky/kandinsky.comp-8.jpg">
 	            <h2>Early Roots</h2>
 				<h5>Late 19th CenturyEarly 20th Century</h5>
 				<p>Fine art had been dramatically evolving in Europe and America with the advent of Impressionism (Monet, Van Gogh), Cubism (Picasso) and Expressionism (Kandisnksy).</p>
