--- a/animhist/pres2/index.html
+++ b/animhist/pres2/index.html
@@ -133,7 +133,7 @@ However, he slowly moved away from his personal experimental work, and died in 1
 				</section>
 				
 				<section data-background="http://iv1.lisimg.com/image/470339/600full-motion-painting-no.-1-screenshot.jpg">
-					<p>Frustrated in his filmmaking, Fischinger turned increasingly to oil painting as a creative outlet. Although the Guggenheim Foundation specifically requested a cel animation film, Fischinger made his Bach film Mostion Painting No.1 (1947) as a documentation of the act of painting, taking a single frame each time he made a brush stroke—and the multi-layered style merely parallels the structure of the Bach music without any tight synchronization. Although he never again received funding for any of his personal films</p>
+					<p style="color: white;">Frustrated in his filmmaking, Fischinger turned increasingly to oil painting as a creative outlet. Although the Guggenheim Foundation specifically requested a cel animation film, Fischinger made his Bach film Mostion Painting No.1 (1947) as a documentation of the act of painting, taking a single frame each time he made a brush stroke—and the multi-layered style merely parallels the structure of the Bach music without any tight synchronization. Although he never again received funding for any of his personal films</p>
 				</section>
 				
 <!-- Oskar Fishinger -->
