--- a/animhist/pres3/index.html
+++ b/animhist/pres3/index.html
@@ -12,6 +12,10 @@
 		        padding: 0.2em 0.5em !important;
 	        }
 	        
+	        li{
+		        list-style: none;
+	        }
+	        
 	        .reveal h1{
 		        color: white;
 		        text-shadow: 1px 1px 1px #626262 !important;
@@ -44,7 +48,7 @@
 			            <li>The development of cable allowed networks to appeal to niche audiences, and more “mature” oriented animated programs.</li>
 		            </ul>
 	            </section>
-	            <section data-background="https://media.giphy.com/media/ogz113wi0OIM0/giphy.gif">
+	            <section data-background="http://i2.kym-cdn.com/photos/images/original/000/642/297/c1d.png">
 		            <h2>Overview</h2>
 		            <ul>
 			            <li>The trend of original, creator-driven animation for a diversity of age groups continued up until the end of the millennium, at which point a multitude of factors would drive studios to reduce budgets, take less risks, and rely more on foreign produced, cheaper animated content.</li>
@@ -102,6 +106,7 @@
 					<h3>(1992 - 1995)</h3>
 				</section>
 				<section data-background-iframe='https://www.youtube.com/embed/3EiEX4tmCfY?autoplay=1'>
+					<img style="width: 400px; opacity: 0.9;" src="http://2.bp.blogspot.com/-fNh2CmUIQ8c/TzypkQvqJkI/AAAAAAAAAyI/dnLC2Za3h9A/s1600/warner+bros+animation+pre-animaniacs.jpg">
 					<p>Steven Spielberg, partnering with Warner Brothers, launched a series of shows harkening back to WB’s classic golden age characters with “Tiny Toon Adventures” (1990) and “Animaniacs.” (1993).</p>
 				</section>
 				<section data-background='http://media.giphy.com/media/14iEFCXZcJmfXq/giphy.gif'>
