--- a/animhist/pres3/index.html
+++ b/animhist/pres3/index.html
@@ -36,7 +36,7 @@
         <div class="reveal">
             <div class="slides">
 	            
-	            <section data-background="https://media.giphy.com/media/mmpwDy3M42rf2/giphy.gif">
+	            <section data-background-iframe='https://www.youtube.com/embed/3EiEX4tmCfY?autoplay=1'>
 		            <h1>Contemporary Television</h1>
 		            <h3>The 90s Renaissance and Beyond</h3>
 	            </section>
@@ -105,7 +105,7 @@
 					<h1>Warner Brothers and Batman: TAS</h1>
 					<h3>(1992 - 1995)</h3>
 				</section>
-				<section data-background-iframe='https://www.youtube.com/embed/3EiEX4tmCfY?autoplay=1'>
+				<section data-background='https://media.giphy.com/media/3oxRmlARNDRqIY4d6U/giphy.gif'>
 					<img style="width: 400px; opacity: 0.9;" src="http://2.bp.blogspot.com/-fNh2CmUIQ8c/TzypkQvqJkI/AAAAAAAAAyI/dnLC2Za3h9A/s1600/warner+bros+animation+pre-animaniacs.jpg">
 					<p>Steven Spielberg, partnering with Warner Brothers, launched a series of shows harkening back to WB’s classic golden age characters with “Tiny Toon Adventures” (1990) and “Animaniacs.” (1993).</p>
 				</section>
