--- a/gameprod/pres1/index.html
+++ b/gameprod/pres1/index.html
@@ -8,43 +8,64 @@
         <div class="reveal">
             <div class="slides">
             	<section>
-            		<h4>Game Title</h4>
-            		<h1>Cave</h1>
+            		<h1>Sojourner Studios</h1>
             	</section>
-	            <section>
-	            	<h4>Story</h4>
-	            	<p>A boy woke up in the dark place. He just realized that he is in a cave. He don't remember why he is here but he is going to get out of here and go home...
-	            	</p>
+            	<section>
+            		<h3>Story</h3>
+            		<p>A lonely knight must gather equipment and learn spells to defeat the forces of Corruption damaging his kingdom. Perhaps a retelling of Lancelot’s exile.</p>
 	            </section>
 	            <section>
-	            	<h4>Game Specification</h4>
-	            	<ul>
-	            		<li>Single Player RPG game.</li>
-	            		<li>8 bit like design</li>
-	            		<li>iOS/Android</li>
-	            	</ul>
+	            	<h3>Genre</h3>
+	            	<p>Sidescrolling 2.5D platformer</p>
+	            	<h3>Platform</h3>
+	            	<p>PC</p>
 	            </section>
 	            <section>
-	            	<h4>Theme</h4>
-	            	<p>A boy must survive and get out from the cave and go to his home by avoiding attack of monsters.</p>
-	            	<h4>Setting</h4>
-	            	<p>Fantasy. Crystals and Monsters in a cave.</p>
+	            	<h3>Vision Statement</h3>
+	            	<p>To foster a sense of adventure, discovery, and connection to the world</p>
 	            </section>
-	            <section>
-	            	<h4>Genre</h4>
-	            	<p>RPG style 8bit 2D game</p>
-	            	<h4>Enemies</h4>
-	            	<ul>
-	            		<li>Zombies</li>
-	            		<li>Bats</li>
-	            		<li>Golems</li>
-	            	</ul>
-	            </section>
-	            <section>
-	            	<h4>Schedule</h4>
-	            	<a href="https://trello.com/b/EzXxlws5/cave">Trello</a>
-	            </section>
-                
+                <section>
+                	<h3>Goal</h3>
+                	<p>To create a painterly 2.5D, side scrolling adventure platformer for PC, release it on North American and European markets, and sell 1.5 million copies.</p>
+                </section>
+                <section>
+                	<h3>Model</h3>
+                	<p>Single game release, moderate cost. Quarterly content releases, low cost.</p>
+                	<h3>Market</h3>
+                	<p>North America/Europe, Ages 8-25, Males and Females</p>
+                </section>
+                <section style="font-size: 70%;">
+                	<h3>Gameplay</h3>
+                	<h4>Basics</h4>
+                	<ul>
+                		<li>
+                		<p>Movement - sidescrolling, moderately paced general movement speeds. </p>
+                			<ul>
+                				<li>Jump is limited and fairly 'realistic', enhanced by spells</li>
+                				<li>Sprint is high output, low duration, and moderate recovery. To be used in bursts</li>
+                			</ul>
+                		</li>
+                		<li>
+                			<p>Attack Commands</p>
+                			<ul>
+                				<li>
+                					<h6>Light Attack</h6>
+                					<ul>
+                						<li>Sprint + Light Attack</li>
+                					</ul>
+                				</li>
+                				<li>
+                					<h6>Heavy Attack</h6>
+                					<ul>
+                						<li>Sprint + Heavy Attack</li>
+                					</ul>
+                				</li>
+                				<li>Block</li>
+                				<li>Spell</li>
+                			</ul>
+                		</li>
+                	</ul>
+                </section>
             </div><!-- Close slides  -->
         </div>
         <script src="../js/revealJS/js/reveal.js"></script>
