--- a/gameprod/pres2/index.html
+++ b/gameprod/pres2/index.html
@@ -32,7 +32,7 @@
                 <section>
                     <section>
                         <h3>Mission Statement</h3>
-                        <p>If you manage your food by this app, you will never spoil your food and take too much time to find a recipe and cook. Manage your food expiration date in this app and you can even know what to buy next by looking up the recipe.</p>
+                        <p>If you manage your food by this app, you will never spoil your food or take too much time to find a recipe and cook. Manage your food expiration date in this app and you can even know what to buy next by looking up the recipe.</p>
                     </section>
                     <section>
                         <p><em>Target</em> - 18 - 24, male/female</p>
