image size changed

--- a/gameprod/pres4/index.html
+++ b/gameprod/pres4/index.html
@@ -29,7 +29,7 @@
                        
                 </section>
                 <section>
-                    <img src="images/fridge.jpeg" style="border: none; box-shadow:none; background: none;">
+                    <img src="images/fridge.jpeg" style="border: none; box-shadow:none; background: none; width:80%;">
                 </section>
                 <section>
                     <h3>Product Summary</h3>
