--- a/work/trex/index.html
+++ b/work/trex/index.html
@@ -22,14 +22,15 @@
         };
         var theMap = new google.maps.Map(document.getElementById("map_canvas"), myMapOptions);
 
-        var icon = "images/icon.png"
+        
         var marker = new google.maps.Marker({
           map: theMap,
-          draggable: true,
           position: new google.maps.LatLng(35.666123,139.733916),
           visible: true,
           icon: icon
         });
+
+        var icon = "images/icon.png"
 
         // var boxText = document.createElement("div");
         // boxText.style.cssText = "border: 1px solid black; margin-top: 8px; background: yellow; padding: 5px;";
@@ -37,14 +38,21 @@
 
         var infoWindowHtml = 
         "<div id='infoWin'>"
-        +"<h1>T.REX Inc.</h1>"
-        +"<h3>CEO: Shinichi Watanabe</h3>"
-        +"<h3>Location: #223 4-3-11, Roppongi Minato, Tokyo Japan 1060032 </h3>"
+	        +"<div>"
+	        	+"<h1 style=''>T.REX Inc.</h1>"
+	        	+"<blockquote>Lots of Missions.</blockquote>"
+	          // +"<h3>Contact Us</h3>     <a href='mailto:info@trext.tokyo'>info@trext.tokyo</a>"
+	        	+"<h3>Location</h3>       <p>#223 4-3-11, Roppongi Minato, Tokyo Japan 1060032</p>"
+	        	+"<h3>CEO</h3><p>Shinichi Watanabe</p>"
+	        +"</div>"
+	        // +"<a href='mailto:info@trext.tokyo'><img src='images/mail.svg'></a>"
+	        +"<div id='mail_icon'>"
+	        +"</div>"
         +"</div>"
 
 
         var pxOffX = -310;
-        var pxOffY = -270;
+        var pxOffY = -340;
 
         var myOptions = {
            content: infoWindowHtml
@@ -56,7 +64,7 @@
             background: "url('images/white.jpg')"
             ,opacity: 0.90
             ,width: "280px"
-            ,height: "280px"　//This is the width of the window.
+            ,height: "350px"　//This is the width of the window.
            }
           ,infoBoxClearance: new google.maps.Size(1, 1)
           ,isHidden: false
