--- a/work/trex/index.html
+++ b/work/trex/index.html
@@ -10,7 +10,9 @@
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyA_lBe2BBKUMic9F1rgYXvNtK6D0EIGv9o"></script> 
 
     <script type="text/javascript" src="js/infobox.js"></script>
+    <script type="text/javascript" src="js/jquery-3.1.0.js"></script>
     <script type="text/javascript">
+    
 
       function initialize() {
         var secheltLoc = new google.maps.LatLng(35.666123,139.733916);
@@ -23,6 +25,8 @@
         var theMap = new google.maps.Map(document.getElementById("map_canvas"), myMapOptions);
 
         
+		var icon = "images/icon.png"
+
         var marker = new google.maps.Marker({
           map: theMap,
           position: new google.maps.LatLng(35.666123,139.733916),
@@ -30,7 +34,10 @@
           icon: icon
         });
 
-        var icon = "images/icon.png"
+        var viewport = {
+    		width  : $(window).width(),
+    		height : $(window).height()
+		};
 
         // var boxText = document.createElement("div");
         // boxText.style.cssText = "border: 1px solid black; margin-top: 8px; background: yellow; padding: 5px;";
@@ -46,13 +53,35 @@
 	        	+"<h3>CEO</h3><p>Shinichi Watanabe</p>"
 	        +"</div>"
 	        // +"<a href='mailto:info@trext.tokyo'><img src='images/mail.svg'></a>"
-	        +"<div id='mail_icon'>"
-	        +"</div>"
+	        +"<a href='#'><h3>Business</h3></a>"
+	        +"<a href='mailto:test@test.com'>"
+		        +"<div id='mail_icon'>"
+		        +"</div>"
+	        +"</a>"
         +"</div>"
 
 
-        var pxOffX = -310;
-        var pxOffY = -340;
+        var pxOffX;
+        var pxOffY;
+
+        var mobileWidth = 1000;
+        var infoWinWidth, infoWinHeight;
+
+        if(viewport.width < mobileWidth){
+        	pxOffX = -(viewport.width/2); //it moves infowindow when you move the map
+        	pxOffY = -(viewport.height/1.5);
+        	infoWinWidth = viewport.width
+        	infoWinHeight = viewport.height/2
+        }else if(viewport.width >= mobileWidth){
+        	pxOffX = -310;
+        	pxOffY = -340;
+        	infoWinWidth = 280
+        	infoWinHeight = infoWinWidth *1.25; //It is calculating height 
+        }
+
+
+        // console.log(toString(infoWinWidth) + "px");
+        console.log(infoWinWidth.toString() + "px");
 
         var myOptions = {
            content: infoWindowHtml
@@ -63,8 +92,8 @@
           ,boxStyle: { 
             background: "url('images/white.jpg')"
             ,opacity: 0.90
-            ,width: "280px"
-            ,height: "350px"　//This is the width of the window.
+            ,width: infoWinWidth.toString() + "px"
+            ,height: infoWinHeight.toString() + "px"　//This is the width of the window.
            }
           ,infoBoxClearance: new google.maps.Size(1, 1)
           ,isHidden: false
