--- a/work/trex/index.html
+++ b/work/trex/index.html
@@ -122,7 +122,7 @@
         theMap.panBy(pxOffX/2,pxOffY/2);
       }
     </script>
-    <script type="text/javascript" src="js/vex.js"></script>
+    <!-- <script type="text/javascript" src="js/vex.js"></script> -->
 
     <title>T.REX Inc.</title>
   </head>
