--- a/work/trex/index.html
+++ b/work/trex/index.html
@@ -44,25 +44,27 @@
         // boxText.innerHTML = "<h1>株式会社ティレックス</h1>";
 
         var infoWindowHtml = 
-        "<div id='infoWin' style=''>"
-	        +"<div>"
-	        	+"<h1 style=''>T.REX Inc.</h1>"
-	        	+"<blockquote>Lots of Missions.</blockquote>"
-	          // +"<h3>Contact Us</h3>     <a href='mailto:info@trext.tokyo'>info@trext.tokyo</a>"
-	        	+"<h3>Location</h3>       <p>#223 4-3-11, Roppongi Minato, Tokyo Japan 1060032</p>"
-	        	+"<h3>CEO</h3><p>Shinichi Watanabe</p>"
-	        +"</div>"
-	        // +"<a href='mailto:info@trext.tokyo'><img src='images/mail.svg'></a>"
-	        +"<a href='#'><h3>Business</h3></a>"
-	        +"<a href='mailto:test@test.com'>"
-		        +"<div id='mail_icon'>"
+        "<div id='content_wrapper'>"
+	        +"<div id='infoWin'>"
+		        +"<div>"
+		        	+"<h1 style=''>T.REX Inc.</h1>"
+		        	+"<blockquote>Lots of Missions.</blockquote>"
+		          // +"<h3>Contact Us</h3>     <a href='mailto:info@trext.tokyo'>info@trext.tokyo</a>"
+		        	+"<h3>Location</h3>       <p>#223 4-3-11, Roppongi Minato, Tokyo Japan 1060032</p>"
+		        	+"<h3>CEO</h3><p>Shinichi Watanabe</p>"
 		        +"</div>"
-	        +"</a>"
-        +"</div>"
+		        // +"<a href='mailto:info@trext.tokyo'><img src='images/mail.svg'></a>"
+		        +"<a href='#'><h3>Business</h3></a>"
+		        +"<a href='mailto:test@test.com'>"
+			        +"<div id='mail_icon'>"
+			        +"</div>"
+		        +"</a>"
+	        +"</div>"
 
-        +"<div id='more_info'>"
-	        	+"<div>This is a test</div>"
-	    +"</div>";
+	        +"<div id='more_info'>"
+		        	+"<div>This is a test</div>"
+		    +"</div>"
+		+"</div> <!-- Close content_wrapper -->"
 
 
         var pxOffX;
