--- a/work/trex/index.html
+++ b/work/trex/index.html
@@ -51,7 +51,7 @@
 		        	+"<h1 style=''>T.Rex Trading Inc.</h1>"
 		        	+"<blockquote>Lots of Missions.</blockquote>"
 		          // +"<h3>Contact Us</h3>     <a href='mailto:info@trext.tokyo'>info@trext.tokyo</a>"
-		        	+"<h3>Location</h3>       <p>#223 4-3-11, Roppongi Minato, Tokyo Japan 1060032</p>"
+		        	+"<p>#223 4-3-11, Roppongi Minato, Tokyo Japan 1060032</p>"
 		        	+"<h3>CEO</h3><p>Shinichi Watanabe</p>"
 		        +"</div>"
 		        // +"<a href='mailto:info@trext.tokyo'><img src='images/mail.svg'></a>"
