--- a/work/trex/index.html
+++ b/work/trex/index.html
@@ -63,20 +63,21 @@
 	        +"</div>"
 
 	     //    +"<div id='more'>"
+			   //  +"</div>"
+				  //   +"<h2>Business</h2>"
+				  //   +"<ul>"
+				  //   	+"<li>Blanket</li>"
+				  //   	+"<li>Mattress & Pillow</li>"
+				  //   	+"<li>Sheets & Pillow case</li>"
+				  //   	+"<li>Sheets</li>"
+				  //   	+"<li>Other accessaries</li>"
+				  //   	+"<li>Skin care oil</li>"
+				  //   	+"<li>A sales consultant</li>"
+				  //   	+"<li>Logistics</li>"
+				  //   	+"<li>Solar power station</li>"
+				  //   +"</ul>"
+			   //  +"</div>"
 		    // +"</div>"
-			   //  +"<h2>Business</h2>"
-			   //  +"<ul>"
-			   //  	+"<li>Blanket</li>"
-			   //  	+"<li>Mattress & Pillow</li>"
-			   //  	+"<li>Sheets & Pillow case</li>"
-			   //  	+"<li>Sheets</li>"
-			   //  	+"<li>Other accessaries</li>"
-			   //  	+"<li>Skin care oil</li>"
-			   //  	+"<li>A sales consultant</li>"
-			   //  	+"<li>Logistics</li>"
-			   //  	+"<li>Solar power station</li>"
-			   //  +"</ul>"
-		    // +"<div>"
 		+"</div> <!-- Close content_wrapper -->"
 
 
