--- a/work/trex/index.html
+++ b/work/trex/index.html
@@ -115,6 +115,7 @@
     <div id="map_canvas" style="width: 100%; height: 100%"></div>
     <div id='more'>
       <img class="trexImage" src="images/walk.gif">
+      <button class="more_close">✖︎</button>
 		  <div class="info">
   				<h2>Business</h2>
   				<ul>
