--- a/work/trex/index.html
+++ b/work/trex/index.html
@@ -131,6 +131,8 @@
   			    	<li>Germany</li>
   			    	<li>Philippines</li>
   				</ul>
+          <h2>Address</h2>
+          <p>4-3-11 #223 Roppongi Minato, Tokyo Japan 1060032 </p>
   				<h2>CEO</h2>
   				<p>Shinichi Watanabe</p>
           <div class="shops">
