--- a/gameprod/pres4/index.html
+++ b/gameprod/pres4/index.html
@@ -211,7 +211,7 @@
                         <p>$2.99 x 6689 users = $20,000/month</p>
                         <p>Expence $18,370/month</p> 
                     </section>
-                </section>n
+                </section>
                 <section>
                     <section>
                         <h3>Competitions</h3>
